# sandman-rs

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
example/: .gitignore  Cargo.toml
example/example_data/: test12.bed  test12.bed.gz.tbi  test3.bed  test3.bed.gz.tbi  test4.bed  test4.bed.gz.tbi  test5.bed  test5.bed.gz.tbi  test6.bed  test6.bed.gz.tbi  test_bedmethyl.bed  test_browserlines.bed  test_trackline.bed
example/src/: main.rs
src/: error.rs  lib.rs
src/bed/: autooneshotreader.rs  autoreader.rs  autorecord.rs  bed.rs  bigbedrecord.rs  blocks.rs  extra.rs  fields.rs  mod.rs  oneshotreader.rs  parser.rs  reader.rs  record.rs  sink.rs
src/filtering/: basechecker.rs  mod.rs
src/store/: interning.rs  mod.rs
src/tabix/: mod.rs
