[package]
name = "sandman"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["sequencing", "bioinformatics"]
authors = ["Eilidh Ward"]
categories = ["science", "filesystem"]
description = "An asynchronous transparent bed/bgz bed reader with tabix support"
repository = "https://github.com/aylz83/sandman-rs"

[dependencies]
byteorder = "1.5.0"
indexset = "0.12.3"
tokio = { version = "1.47.1", features = ["full"] }
pufferfish = { git = "https://github.com/aylz83/pufferfish-rs", version = "0.1.2" }
thiserror = "2.0.17"
nom = "8.0.0"

bincode = { version = "2.0.1", optional = true }

[features]
default = []

bincode = ["dep:bincode"]
