[package]
name = "sandman"
version = "0.2.1"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["sequencing", "bioinformatics"]
authors = ["Eilidh Ward"]
categories = ["science", "filesystem"]
description = "An asynchronous transparent bed/bgz bed reader with tabix and interning support"
repository = "https://github.com/aylz83/sandman-rs"

[dependencies]
byteorder = "1.5.0"
indexset = "0.12.3"
tokio = { version = "1.47.1", features = ["full"] }
pufferfish = { git = "https://github.com/aylz83/pufferfish-rs", version = "0.1.3" }
thiserror = "2.0.17"
nom = "8.0.0"
bincode = { version = "2.0.1", optional = true }
string-interner = { version = "0.19.0", optional = true }
async-trait = "0.1.89"

[features]
default = []
interning = ["dep:string-interner"]
bincode = ["dep:bincode"]
bigbed = ["pufferfish/zlib"]
