[package]
name = "sandman"
version = "0.3.1"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["sequencing", "bioinformatics"]
authors = ["Eilidh Ward"]
categories = ["science", "filesystem"]
description = "An asynchronous, FAST bgzip bed reader with interning support"
repository = "https://github.com/aylz83/sandman-rs"

[dependencies]
byteorder = "1.5.0"
tokio = { version = "1.47.1", features = ["full"] }
pufferfish = { git = "https://github.com/aylz83/pufferfish-rs", features = ["bgzf-async", "bgzf-stream"] }
thiserror = "2.0.17"
nom = "8.0.0"
bincode = { version = "2.0.1", optional = true }
string-interner = { version = "0.19.0", optional = true }
faisync = { git = "https://github.com/aylz83/faisync-rs" }
futures = "0.3.32"
rayon = "1.11.0"
memchr = "2.8.0"
lexical-core = "1.0.6"
serde = { version = "1.0.228", features = ["serde_derive"] }

[features]
default = []
bincode = ["dep:bincode"]
interning = ["dep:string-interner"]

